--- a/H&F.html
+++ b/H&F.html
@@ -15,30 +15,30 @@
                 <a href="#"><img src="../img/322343.png" alt="Oppty Logo"></a>
             </div>
             <ul class="nav-links">
-                <li><a href="#home" class="active">Home</a></li>
-                <li><a href="#about">About Us</a></li>
+                <li><a href="../Oppty-BPO-/html/home.html" class="active">Home</a></li>
+                <li><a href="../Oppty-BPO-/html/About.html">About Us</a></li>
                 <li class="dropdown-wrapper">
                     <a href="#services">What We Do <span class="arrow"></span></a>
                     <div class="mega-menu">
                         <div class="mega-grid">
                             <div class="mega-column">
                                 <h3>Operations</h3>
-                                <a href="#">Break Management System</a>
-                                <a href="#">Logistics & Supply Chain</a>
-                                <a href="#">Finance & Accounting</a>
+                                <a href="../Oppty-BPO-/what we do html/bms.html">Break Management System</a>
+                                <a href="../Oppty-BPO-/what we do html/L&s.html">Logistics & Supply Chain</a>
+                                <a href="../Oppty-BPO-/what we do html/finance.html">Finance & Accounting</a>
                             </div>
                             <div class="mega-column">
                                 <h3>Digital</h3>
-                                <a href="#">UI/UX Design</a>
-                                <a href="#">AI Automation</a>
-                                <a href="#">IT Consultancy</a>
+                                <a href="../Oppty-BPO-/what we do html/ui&ux.html">UI/UX Design</a>
+                                <a href="../Oppty-BPO-/what we do html/Ai.html">AI Automation</a>
+                                <a href="../Oppty-BPO-/what we do html/it.html">IT Consultancy</a>
                             </div>
                         </div>
                     </div>
                 </li>
-                <li><a href="#insights">Insights</a></li>
-                <li><a href="#careers">Careers</a></li>
-                <li><a href="#contact" class="nav-cta">Contact Us</a></li>
+                <li><a href="../Oppty-BPO-/html/Insights.html">Insights</a></li>
+                <li><a href="../Oppty-BPO-/html/careers.html">Careers</a></li>
+                <li><a href="../Oppty-BPO-/html/contact.html" class="nav-cta">Contact Us</a></li>
             </ul>
         </nav>
     </div>
