--- a/html/careers.html
+++ b/html/careers.html
@@ -4,41 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../css/careers.css">
+    <link rel="stylesheet" href="../H&F.css">
     <title>Oppty-BPO</title>
 </head>
 <body>
-    <header class="main-header">    
+        <header class="main-header">    
     <div class="container">
         <nav class="navbar">
             <div class="logo">
                 <a href="#"><img src="../img/322343.png" alt="Oppty Logo"></a>
             </div>
             <ul class="nav-links">
-                <li><a href="#home" class="active">Home</a></li>
-                <li><a href="#about">About Us</a></li>
+                <li><a href="../html/home.html" class="active">Home</a></li>
+                <li><a href="../html/About.html">About Us</a></li>
                 <li class="dropdown-wrapper">
                     <a href="#services">What We Do <span class="arrow"></span></a>
                     <div class="mega-menu">
                         <div class="mega-grid">
                             <div class="mega-column">
                                 <h3>Operations</h3>
-                                <a href="#">Break Management System</a>
-                                <a href="#">Logistics & Supply Chain</a>
-                                <a href="#">Finance & Accounting</a>
+                                <a href="../what we do html/bms.html">Break Management System</a>
+                                <a href="../what we do html/L&s.html">Logistics & Supply Chain</a>
+                                <a href="../what we do html/finance.html">Finance & Accounting</a>
                             </div>
                             <div class="mega-column">
                                 <h3>Digital</h3>
-                                <a href="#">UI/UX Design</a>
-                                <a href="#">AI Automation</a>
-                                <a href="#">IT Consultancy</a>
+                                <a href="../what we do html/ui&ux.html">UI/UX Design</a>
+                                <a href="../what we do html/Ai.html">AI Automation</a>
+                                <a href="../what we do html/it.html">IT Consultancy</a>
                             </div>
                         </div>
                     </div>
                 </li>
-                <li><a href="#insights">Insights</a></li>
-                <li><a href="#careers">Careers</a></li>
-                <li><a href="#contact" class="nav-cta">Contact Us</a></li>
+                <li><a href="../html/Insights.html">Insights</a></li>
+                <li><a href="../html/careers.html">Careers</a></li>
+                <li><a href="../html/contact.html" class="nav-cta">Contact Us</a></li>
             </ul>
         </nav>
     </div>
