--- a/html/Insights.html
+++ b/html/Insights.html
@@ -43,3 +43,65 @@
         </nav>
     </div>
 </header>
+
+
+
+
+
+<footer class="main-footer">
+    <div class="container footer-grid">
+        <div class="footer-column brand-info">
+            <img src="../img/322343.png" alt="Oppty Logo" class="footer-logo">
+            <p>Transforming business visions into reality through innovative BPO solutions and AI-driven automation.</p>
+            <div class="social-links">
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
+
+        <div class="footer-column">
+            <h3>Services</h3>
+            <ul>
+                <li><a href="../what we do html/bms.html">Break Management System</a></li> 
+                <li><a href="../what we do html/L&s.html">Logistics & Supply Chain</a></li>
+                <li><a href="../what we do html/finance.html">Finance & Accounting</a></li>
+                <li><a href="../what we do html/ui&ux.html">UI/UX Design</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-column">
+            <h3>Company</h3>
+            <ul>
+                <li><a href="../html/About.html">About Us</a></li>
+                <li><a href="../html/Insights.html">Insights</a></li>
+                <li><a href="../html/careers.html">Careers</a></li> 
+                <li><a href="../html/contact.html">Contact Us</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-column contact-box">
+            <h3>Get in Touch</h3>
+            <p>Ready to start your next big project?</p>
+            <form class="footer-form">
+                <input type="email" placeholder="Email Address">
+                <button type="submit" class="btn-pill">Subscribe</button>
+            </form>
+        </div>
+    </div>
+
+    <div class="footer-certificates">
+        <div class="container">
+            <div class="cert-flex">
+                <div class="cert-card"><img src="../img/36662669-1685562943668-bf31f5769c66e.jpeg" alt="Startup India"></div>
+                <div class="cert-card"><img src="../img/Ministry-for-Corporate-AffairS-1-removebg-preview.png" alt="Ministry of Corporate Affairs"></div>
+                <div class="cert-card"><img src="../img/png-clipart-government-of-india-ministry-of-micro-small-and-medium-enterprises-small-business-india-text-logo__1_-removebg-preview.png" alt="Ministry of MSME"></div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="footer-bottom">
+        <p>&copy; 2026 Oppty-BPO. All Rights Reserved. | <a href="#">Privacy Policy</a></p>
+    </div>
+</footer>
+
