--- a/html/home.html
+++ b/html/home.html
@@ -44,39 +44,78 @@
     </div>
 </header>
 
-<section class="hero-perspective" id="home">
-    <div class="container stack-container">
-        <div class="hero-content-layer">
-            <div class="hero-badge">Digital Excellence 2026</div>
-            <h1 class="hero-main-title">
-                The Future of <br>
-                <span class="animated-text">Business Intelligence</span>
-            </h1>
-            <p class="hero-desc">
-                Oppty-BPO integrates AI-driven automation with high-touch human expertise to redefine operational efficiency.
-            </p>
-            <div class="hero-cta-group">
-                <a href="#contact" class="btn-primary-pill">Launch Project</a>
-                <a href="#video" class="btn-play-pill"><i class="fas fa-play"></i> Watch Demo</a>
+<!--hero section-->
+
+<section class="velocity-hero">
+    <div class="container velocity-grid">
+        <div class="v-content">
+            <div class="v-badge">BPO 2.0 • Digital Transformation</div>
+            <h1 class="v-title">Scalable Operations for <br> <span>Modern Enterprises</span></h1>
+            <p class="v-subtitle">Oppty-BPO combines human intelligence with AI-driven workflows to optimize your Break Management and Logistics.</p>
+            <div class="v-actions">
+                <a href="#contact" class="btn-primary">Get Started</a>
+                <a href="#about" class="btn-link">Our Story <i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
 
-        <div class="hero-3d-stack">
-            <div class="stack-item item-1">
+        <div class="v-visual-grid">
+            <div class="v-card v-main">
                 <img src="../img/322343.png" alt="Oppty Logo">
-                <span class="status-indicator"></span>
             </div>
-            <div class="stack-item item-2">
-                <i class="fas fa-shipping-fast"></i>
-                <p>Logistics Optimized</p>
+            <div class="v-card v-stat">
+                <h3>99.9%</h3>
+                <p>Uptime</p>
             </div>
-            <div class="stack-item item-3">
-                <i class="fas fa-check-circle"></i>
-                <p>99.9% Compliance</p>
+            <div class="v-card v-feature">
+                <i class="fas fa-shield-alt"></i>
+                <p>Compliance</p>
             </div>
         </div>
     </div>
 </section>
+
+
+<!--what we do section-->
+<section class="impact-section" id="services">
+    <div class="container">
+        <div class="section-intro">
+            <h2 class="v-title">What We <span>Do</span></h2>
+            <p class="v-subtitle">Empowering business growth through structured operations and digital transformation.</p>
+        </div>
+
+        <div class="impact-mosaic">
+            <div class="mosaic-card featured-card">
+                <div class="card-content">
+                    <span class="badge-pill">Proprietary Tech</span>
+                    <h3>Break Management System</h3>
+                    <p>Advanced admin and user portals designed to optimize workforce productivity and ensure operational compliance.</p>
+                    <a href="#" class="btn-text">Learn More <i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="card-visual">
+                    <i class="fas fa-clock"></i>
+                </div>
+            </div>
+
+            <div class="mosaic-card">
+                <i class="fas fa-shipping-fast card-icon"></i>
+                <h4>Logistics & Supply Chain</h4>
+                <p>Streamlined freight billing and EDI implementations for global movement.</p>
+            </div>
+
+            <div class="mosaic-card">
+                <i class="fas fa-file-invoice-dollar card-icon"></i>
+                <h4>Finance & Accounting</h4>
+                <p>Precision bookkeeping and payroll processing for modern enterprises.</p>
+            </div>
+
+            <div class="mosaic-card">
+                <i class="fas fa-paint-brush card-icon"></i>
+                <h4>Digital Experience</h4>
+                <p>High-end UI/UX design and application modernization services.</p>
+            </div>
+        </div>
+    </div>
+</section> 
 
 <script src="../javascript/home.js"></script>
 </body>
