--- a/H&F.html
+++ b/H&F.html
@@ -61,20 +61,20 @@
         <div class="footer-column">
             <h3>Services</h3>
             <ul>
-                <li><a href="#">Break Management System</a></li> 
-                <li><a href="#">Logistics & Supply Chain</a></li>
-                <li><a href="#">Finance & Accounting</a></li>
-                <li><a href="#">UI/UX Design</a></li>
+                <li><a href="../what we do html/bms.html">Break Management System</a></li> 
+                <li><a href="../what we do html/L&s.html">Logistics & Supply Chain</a></li>
+                <li><a href="../what we do html/finance.html">Finance & Accounting</a></li>
+                <li><a href="../what we do html/ui&ux.html">UI/UX Design</a></li>
             </ul>
         </div>
 
         <div class="footer-column">
             <h3>Company</h3>
             <ul>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#insights">Insights</a></li>
-                <li><a href="#careers">Careers</a></li> 
-                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="../html/About.html">About Us</a></li>
+                <li><a href="../html/Insights.html">Insights</a></li>
+                <li><a href="../html/careers.html">Careers</a></li> 
+                <li><a href="../html/contact.html">Contact Us</a></li>
             </ul>
         </div>
 
