--- a/html/About.html
+++ b/html/About.html
@@ -44,3 +44,62 @@
         </nav>
     </div>
 </header>
+<section class="hero">
+  <svg class="constellation-svg" width="100%" height="100%">
+    <line x1="10%" y1="20%" x2="30%" y2="40%" class="line-anim" />
+    <line x1="30%" y1="40%" x2="20%" y2="70%" class="line-anim" />
+    <line x1="80%" y1="20%" x2="60%" y2="50%" class="line-anim" />
+    <line x1="60%" y1="50%" x2="90%" y2="80%" class="line-anim" />
+    <line x1="20%" y1="70%" x2="50%" y2="85%" class="line-anim" />
+  </svg>
+
+  <div class="glow-boll boll-1"></div>
+  <div class="glow-boll boll-2"></div>
+
+  <div class="glow-container">
+    <div class="particle p1"></div><div class="particle p2"></div>
+    <div class="particle p3"></div><div class="particle p4"></div>
+    <div class="particle p5"></div><div class="particle p6"></div>
+    <div class="particle p7"></div><div class="particle p8"></div>
+  </div>
+
+  <div class="hero-content-wrapper">
+    <div class="hero-slide">
+      <div class="badge-button"><span class="glow-point"></span><i class="fa-solid fa-rocket"></i> About Us</div>
+      <h1>Unlocking Growth: by <span class="gradient-text">Our Expert Team</span></h1>
+      <p class="hero-p">Oppty offers the best BPO and digital services for mobile apps and web development since 2014.</p>
+    </div>
+    
+    <div class="hero-slide">
+      <div class="badge-button"><span class="glow-point"></span><i class="fa-solid fa-chart-line"></i> Our Mission</div>
+      <h1>Scalable BPO: for <span class="gradient-text">Global Brands</span></h1>
+      <p class="hero-p">Driving digital performance through expert data collection and structural skeleton design.</p>
+    </div>
+
+    <div class="hero-slide">
+      <div class="badge-button"><span class="glow-point"></span><i class="fa-solid fa-microchip"></i> Technology</div>
+      <h1>Innovative AI: <span class="gradient-text">Future Ready</span></h1>
+      <p class="hero-p">Automating complex workflows with custom-built AI solutions and smart data analytics.</p>
+    </div>
+
+    <div class="hero-slide">
+      <div class="badge-button"><span class="glow-point"></span><i class="fa-solid fa-users"></i> Partnerships</div>
+      <h1>Your Success: <span class="gradient-text">Our Priority</span></h1>
+      <p class="hero-p">Collaborating with global partners to deliver seamless operational excellence 24/7.</p>
+    </div>
+
+    <div class="hero-slide">
+      <div class="badge-button"><span class="glow-point"></span><i class="fa-solid fa-clock"></i> BMS</div>
+      <h1>Optimized: <span class="gradient-text">Break Management</span></h1>
+      <p class="hero-p">Enhancing workplace productivity through intelligent scheduling and real-time monitoring.</p>
+    </div>
+
+    <div class="hero-slide">
+      <div class="badge-button"><span class="glow-point"></span><i class="fa-solid fa-truck-fast"></i> Logistics</div>
+      <h1>Supply Chain: <span class="gradient-text">Seamless Flow</span></h1>
+      <p class="hero-p">End-to-end logistics support to ensure your operations never skip a beat.</p>
+    </div>
+  </div>
+</section>
+</body>
+</html>
