--- a/H&F.html
+++ b/H&F.html
@@ -12,7 +12,7 @@
     <div class="container">
         <nav class="navbar">
             <div class="logo">
-                <a href="#"><img src="../img/322343.png" alt="Oppty Logo"></a>
+                <a href="#"><img src="/Oppty-BPO-/img/322343.png" alt="Oppty Logo"></a>
             </div>
             <ul class="nav-links">
                 <li><a href="#home" class="active">Home</a></li>
@@ -49,7 +49,7 @@
 <footer class="main-footer">
     <div class="container footer-grid">
         <div class="footer-column brand-info">
-            <img src="../img/322343.png" alt="Oppty Logo" class="footer-logo">
+            <img src="/Oppty-BPO-/img/oppty.png" alt="Oppty Logo" class="footer-logo">
             <p>Transforming business visions into reality through innovative BPO solutions and AI-driven automation.</p>
             <div class="social-links">
                 <a href="#"><i class="fab fa-linkedin"></i></a>
@@ -91,7 +91,7 @@
     <div class="footer-certificates">
         <div class="container">
             <div class="cert-flex">
-                <div class="cert-card"><img src="../img/36662669-1685562943668-bf31f5769c66e.jpeg" alt="Startup India"></div>
+                <div class="cert-card"><img src="/Oppty-BPO-/img/" alt="Startup India"></div>
                 <div class="cert-card"><img src="../img/Ministry-for-Corporate-AffairS-1-removebg-preview.png" alt="Ministry of Corporate Affairs"></div>
                 <div class="cert-card"><img src="../img/png-clipart-government-of-india-ministry-of-micro-small-and-medium-enterprises-small-business-india-text-logo__1_-removebg-preview.png" alt="Ministry of MSME"></div>
             </div>
