--- a/html/careers.html
+++ b/html/careers.html
@@ -102,3 +102,5 @@
         <p>&copy; 2026 Oppty-BPO. All Rights Reserved. | <a href="#">Privacy Policy</a></p>
     </div>
 </footer>
+</body>
+</html>
