--- a/html/contact.html
+++ b/html/contact.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
+
     <link rel="stylesheet" href="../H&F.css">
-    <title>Oppty-BPO</title>
+    <link rel="stylesheet" href="../css/contact.css">
+<script src="https://kit.fontawesome.com/your-key.js" crossorigin="anonymous"></script>
+    <title>Contact Oppty-BPO</title>
 </head>
 <body>
         <header class="main-header">    
@@ -43,7 +47,271 @@
         </nav>
     </div>
 </header>
+<section class="hero" id="parallax-hero">
+    <svg class="constellation-svg" width="100%" height="100%">
+        <line x1="15%" y1="20%" x2="35%" y2="45%" class="line-anim" />
+        <line x1="35%" y1="45%" x2="25%" y2="75%" class="line-anim" />
+        <line x1="85%" y1="25%" x2="65%" y2="55%" class="line-anim" />
+        <line x1="65%" y1="55%" x2="85%" y2="85%" class="line-anim" />
+    </svg>
 
+    <div class="parallax-layer boll-1"></div>
+    <div class="parallax-layer boll-2"></div>
+
+    <div class="glow-container">
+        <div class="particle p1"></div>
+        <div class="particle p2"></div>
+        <div class="particle p3"></div>
+    </div>
+
+    <div class="hero-content-wrapper">
+        <div class="hero-slide active">
+            <div class="badge-button">
+                <span class="glow-point"></span>
+                <div class="abouticon">
+                <i class="fa-solid fa-rocket "></i> <span>About Us</span>
+                </div>
+            </div>
+            <h1>Unlocking Growth: by <br><span class="gradient-text">Our Expert Team</span></h1>
+          <p class="hero-p">
+  Since 2014, Oppty has been empowering businesses with world-class BPO and digital solutions.
+  We design, build, and manage scalable mobile and web platforms that help brands grow,
+  innovate, and stay ahead in a competitive digital world.
+</p>
+</div>
+<div class="hero-highlights">
+  <span><i class="fa-solid fa-check"></i> 24/7 Global Support</span>
+  <span><i class="fa-solid fa-check"></i> Agile Development</span>
+  <span><i class="fa-solid fa-check"></i> Trusted Since 2014</span>
+</div>
+
+    </div>
+</section>
+<section class="contact-section">
+        <div class="floating-assets">
+            <i class="fas fa-envelope icon-1"></i>
+            <i class="fas fa-phone icon-2"></i>
+            <i class="fas fa-paper-plane icon-3"></i>
+        </div>
+
+  <div class="contact-card">
+
+    <!-- LEFT -->
+    <div class="contact-left">
+      <div class="icon-box">
+        <i class="fa-solid fa-chart-line"></i>
+      </div>
+
+      <h2>
+        Let's Build Something
+        <span>Amazing</span>
+      </h2>
+
+      <p>
+        Share your project idea with us. Our team will get back to you within
+        24 hours.
+      </p>
+
+      <ul class="features">
+        <li>
+          <span><i class="fa-regular fa-clock"></i></span>
+          <div>
+            <strong>Quick Response</strong>
+            <small>Within 24 hours</small>
+          </div>
+        </li>
+
+        <li>
+          <span><i class="fa-solid fa-shield-halved"></i></span>
+          <div>
+            <strong>Secure & Private</strong>
+            <small>Your data is protected</small>
+          </div>
+        </li>
+
+        <li>
+          <span><i class="fa-solid fa-users-gear"></i></span>
+          <div>
+            <strong>Expert Team</strong>
+            <small>50+ skilled developers</small>
+          </div>
+        </li>
+      </ul>
+    </div>
+
+    <!-- RIGHT -->
+    <div class="contact-right">
+      <span class="badge">
+        <i class="fa-solid fa-star"></i> Free Consultation
+      </span>
+
+      <h3>Get in Touch</h3>
+      <p>Fill out the form and we'll be in touch soon.</p>
+
+      <form>
+        <div class="input-box">
+          <i class="fa-regular fa-user"></i>
+          <input type="text" placeholder="Your full name" />
+        </div>
+
+        <div class="input-box">
+          <i class="fa-regular fa-envelope"></i>
+          <input type="email" placeholder="your@email.com" />
+        </div>
+
+        <div class="input-box">
+          <i class="fa-solid fa-phone"></i>
+          <input type="tel" placeholder="123 456 7890" />
+        </div>
+
+        <div class="input-box">
+          <i class="fa-solid fa-wallet"></i>
+          <select>
+            <option>Select your budget range</option>
+            <option>$1k – $5k</option>
+            <option>$5k – $10k</option>
+            <option>$10k+</option>
+          </select>
+        </div>
+
+        <button type="submit">
+          <i class="fa-solid fa-paper-plane"></i>
+          Send Message
+        </button>
+      </form>
+    </div>
+
+  </div>
+
+    </section>
+    <section class="services-grid" id="core-services">
+  <div class="grid-container">
+
+    <!-- Style 1 : Gradient Hover -->
+    <div class="service-card style-one">
+      <i class="fas fa-headset"></i>
+      <h3>Customer Support</h3>
+      <p>24/7 Omni-channel support for global clients.</p>
+    </div>
+
+    <!-- Style 2 : Glassmorphism -->
+    <div class="service-card style-two">
+      <i class="fas fa-cloud"></i>
+      <h3>Cloud Solutions</h3>
+      <p>Scalable, secure and optimized cloud services.</p>
+    </div>
+
+    <!-- Style 3 : Border + Icon Lift -->
+    <div class="service-card style-three">
+      <i class="fas fa-shield-halved"></i>
+      <h3>Cyber Security</h3>
+      <p>Advanced protection for data & infrastructure.</p>
+    </div>
+
+  </div>
+</section>
+
+<section class="global-reach">
+  <h2>Our Location</h2>
+  <p>Visit Oppty at our office</p>
+
+  <div class="map-wrapper">
+    <iframe
+      src="https://www.google.com/maps?q=Oppty&output=embed"
+      allowfullscreen
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+  </div>
+</section>
+
+<section class="stats-section">
+  <div class="stats-grid">
+
+    <div class="stat-box style-modern">
+      <div class="icon"><i class="fas fa-heart"></i></div>
+      <h2 class="counter" data-target="98">0</h2>
+      <span>% Client Retention</span>
+    </div>
+
+    <div class="stat-box style-modern">
+      <div class="icon"><i class="fas fa-briefcase"></i></div>
+      <h2 class="counter" data-target="250">0</h2>
+      <span>Projects Delivered</span>
+    </div>
+
+    <div class="stat-box style-modern">
+      <div class="icon"><i class="fas fa-users"></i></div>
+      <h2 class="counter" data-target="120">0</h2>
+      <span>Happy Clients</span>
+    </div>
+
+    <div class="stat-box style-modern">
+      <div class="icon"><i class="fas fa-award"></i></div>
+      <h2 class="counter" data-target="15">0</h2>
+      <span>Years of Excellence</span>
+    </div>
+
+  </div>
+</section>
+
+<section class="footer-cta">
+
+  <!-- Wave -->
+  <svg class="wave" viewBox="0 0 1440 320" preserveAspectRatio="none">
+    <path fill="#1d103c" d="M0,192L80,176C160,160,320,128,480,144C640,160,800,224,960,234C1120,245,1280,203,1440,192L1440,0L0,0Z"></path>
+  </svg>
+
+  <div class="cta-container">
+
+    <!-- LEFT IMAGE -->
+    <div class="cta-image">
+      <img src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d" alt="Team">
+      <div class="glow"></div>
+    </div>
+
+    <!-- RIGHT CONTENT -->
+    <div class="cta-content">
+
+      <span class="cta-badge">
+        <i class="fas fa-rocket"></i> Let’s Collaborate
+      </span>
+
+      <h2>
+        Ready to Build Your
+        <span>Next Big Idea?</span>
+      </h2>
+
+      <p>
+        Partner with Oppty to create scalable, secure, and impactful digital solutions.
+      </p>
+
+      <!-- STATS -->
+      <div class="cta-stats">
+        <div>
+          <strong>250+</strong>
+          <small>Projects</small>
+        </div>
+        <div>
+          <strong>98%</strong>
+          <small>Retention</small>
+        </div>
+        <div>
+          <strong>15+</strong>
+          <small>Years</small>
+        </div>
+      </div>
+
+      <!-- BUTTON -->
+      <button class="magnetic-btn">
+        <i class="fas fa-handshake"></i>
+        Work With Us
+      </button>
+
+    </div>
+
+  </div>
+</section>
 
 <footer class="main-footer">
     <div class="container footer-grid">
@@ -101,3 +369,6 @@
         <p>&copy; 2026 Oppty-BPO. All Rights Reserved. | <a href="#">Privacy Policy</a></p>
     </div>
 </footer>
+<script src="../javascript/contact.js"></script>
+</body>
+</html>
