--- a/html/careers.html
+++ b/html/careers.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../H&F.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../css/careers.css">
     <title>Careers</title>
 </head>
@@ -14,14 +14,14 @@
         <nav class="navbar">
             
             <div class="logo-sector">
-                <a href="../html/home.html">
+                <a href="../index.html">
                     <img src="../img/322343.png" alt="Oppty Logo" class="nav-logo-img">
                 </a>
             </div>
 
             <ul class="nav-links">
                 <li>
-                    <a href="../html/home.html" class="nav-item active">Home</a>
+                    <a href="../index.html" class="nav-item active">Home</a>
                 </li>
                 <li>
                     <a href="../html/About.html" class="nav-item">About Us</a>
@@ -557,7 +557,7 @@
 
     </div>
 </footer>
-<script src="H&F.js"></script>
+<script src="script.js"></script>
 <script src="../javascript/careers.js"></script>
 </body>
 </html>
